--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 a{text-decoration: none; color: inherit;}
 img{
     filter: grayscale(100%);
-    transition-duration: 2s;
+    transition-duration: 1s;
 }
 img:hover{
     filter: none;
@@ -33,6 +33,14 @@ html,body{
 
 *{
     box-sizing: border-box;
+}
+
+.myLogo{
+    height: 40px;
+    width: 40px;
+    filter: none;
+    border: 2px solid var(--colorA);
+    border-radius: 50px;
 }
 
 body{
@@ -527,14 +535,14 @@ body{
         flex-direction: column;
     }
     .my-card{
-        width: 350px;
+        width: 320px;
     }
     .card-content-right{
         margin: 0 auto;
         right: 0;
     }
     .card-main{
-        width: 350px;
+        width: 320px;
     }
     .fixed{
         display: none;
